# maker-dashboard

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  execution.md  migration_changes.md  package-lock.json
.cargo/: config.toml
.github/: MAINTAINERS
.github/workflows/: docker-build.yml  docker-publish.yml  integration-test.yml  release.yml  test.yml  update-coinswap.yml
deploy/: README.md  maker-dashboard-forwarder.py  maker-dashboard-forwarder.service  maker-dashboard-listen.sh  maker-dashboard-listener.service  maker-dashboard-update.service  maker-dashboard-update.sh  maker-dashboard-update.timer  maker-dashboard.service  notify-matrix.sh  setup.sh  teardown.sh
docker/: .env.example  Dockerfile.integration-test  bitcoin.conf  docker-compose.yml  entrypoint-integration-test.sh
docs/: ARCH.md
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/app/: api.ts  app.css  main.tsx
frontend/app/components/: BitcoindWidget.tsx  Nav.tsx  SatsAmount.tsx  Toast.tsx
frontend/app/routes/: addMaker.tsx  home.tsx  login.tsx  maker.tsx  makersetup.tsx  onboarding.tsx  setup.tsx
frontend/app/routes/makerDetails/: components.tsx  dashboard.tsx  history.tsx  index.tsx  log.tsx  settings.tsx  swapReport.tsx  types.ts  types.tsx  wallet.tsx
packaging/: README.md
packaging/mynode/: coinswap_maker.service
packaging/umbrel/: dev.md  docker-compose.yml
src/: auth.rs  cli.rs  lib.rs  main.rs  server.rs  tor_manager.rs
src/api/: auth.rs  bitcoind.rs  dto.rs  fidelity.rs  makers.rs  mod.rs  monitoring.rs  onboarding.rs  wallet.rs
src/maker_manager/: maker_pool.rs  message.rs  mod.rs  persistence.rs
src/middlewares/: mod.rs
src/utils/: bidirectional_channel.rs  log_writer.rs  mod.rs
tests/: integration_test.rs
tests/api/: auth.rs  fidelity.rs  makers.rs  mod.rs  monitoring.rs  wallet.rs
